<resources>
    <string name="app_name">Pawpal</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="dont_have_account">don\'t have an account?</string>
    <string name="sign_in">sign in</string>
    <string name="cat_sleeping">cat sleeping</string>
    <string name="name">name</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="sign_up">sign up</string>
    <string name="match_onboarding_heading">Let\'s Find Your Purrfect Match!</string>
    <string name="back_button_description">Navigate to previous screen</string>

    <!-- Akbar Workspace -->
    <!-- Warning : Dont change anything -->

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="click_to_edit">Click to edit</string>

    <!-- Akabr Workspace End -->



</resources>